# HARDN

./: .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CHANGLELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  TODO.md  banner.rs  deny.toml  hardn-service-manager.sh  install-rust.sh  install.sh  lynis_hardening_checklist.txt  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: black.yml  ci.yml  codeql.yml  dependency-review.yml  metrics.yml  sbom.yml  security.yml  test.yml
contrib/webhook-receiver/: verify.py
dashboard/: index.html
debian/: changelog  control  copyright  debian.install  files  hardn.install  hardn.postrm.debhelper  hardn.substvars  postinst  postrm  rules
debian/hardn/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
docs/: BUG_REPORT.md  CI-SECURITY.md  CONSOLE.md  SECURITY_TOOLS_ACTIVATION.md  SPRINT-PLAN.md  THREAT-MODEL.md  diagram.md  hardn-api.md  hardn-audit.md  hardn-monitor.md  hardn-service-manager-execution-flow.md  hardn-service-manager.md  hardn-service.md  hardn-tools.md  hardn.md  legion-daemon.md  security-posture.md  supported-platforms.md
docs/tests/: tb_report.md
etc/aide/: aide.conf
etc/hardn/: legion.conf
packaging/: hardn-console.sudoers
scripts/: advanced-lynis-hardening.sh  boost-lynis-score.sh  fix-fail2ban-ipv6.sh  fix-legion-service.sh  fix-lynis-warnings.sh  fix-pam-sudo.sh  hardening-verify.sh  hardn-lynis-comprehensive.sh  print-banner.sh
src/: grafana.rs  graphana.rs  hardn-api.py  hardn-apid.rs  hardn-gui.rs  hardn-monitor.rs  main.rs  security_tool_manager.rs
src/api/: audit_log.rs  auth.rs  mod.rs
src/audit/: hardn_audit.c  rules_autogen.inc  rules_source.txt
src/cli/: mod.rs
src/core/: config.rs  cron.rs  error.rs  mod.rs  pam_guard.rs  types.rs
src/display/: banner.rs  mod.rs
src/execution/: mod.rs  runner.rs
src/legion/: auth.rs  banner.rs  baseline.rs  behavioral.rs  config.rs  containers.rs  correlation.rs  crypto.rs  filesystem.rs  functions.rs  inventory.rs  kernel.rs  legion.rs  logs.rs  memory.rs  ml_baseline.rs  mod.rs  network.rs  packages.rs  permissions.rs  processes.rs  response.rs  risk_scoring.rs  services.rs  threat_intel.rs  usb.rs  vulnerabilities.rs
src/legion/core/: framework.rs  framework_pipeline.rs  legion.rs  mod.rs
src/legion/core/baseline/: mod.rs
src/legion/core/collectors/: cpu.rs  database.rs  memory.rs  mod.rs
src/legion/core/config/: mod.rs
src/legion/core/heuristics/: database.rs  mod.rs  resource.rs
src/legion/core/responders/: mod.rs  noop.rs
src/legion/modules/: crypto.rs  filesystem.rs  inventory.rs  kernel.rs  logs.rs  memory.rs  mod.rs  network.rs  packages.rs  permissions.rs  processes.rs  response.rs  risk_scoring.rs  services.rs  threat_intel.rs  usb.rs  vulnerabilities.rs
src/legion/modules/auth/: mod.rs
src/legion/modules/behavioral/: mod.rs
src/legion/modules/containers/: mod.rs
src/legion/modules/correlation/: mod.rs
src/legion/modules/sentry/: mod.rs
src/security/: mod.rs
src/services/: mod.rs
src/setup/: main.rs
src/tools/: mod.rs
src/utils/: alerts.rs  logging.rs  mod.rs  path_security.rs  paths.rs  system.rs  updates.rs
systemd/: hardn-api.service  hardn-grafana.service  hardn-monitor.service  hardn.service  legion-daemon.service
tests/: .gitignore  README.md  TEST_SUITE_PLAN.md  run-all.sh
tests/cargo/: cargo-test.t.sh
tests/fuzz/: audit_parser_harness.c
tests/fuzz/corpus/: embedded_nul  long_values  longline  malformed_kv  many_lines  no_newline  strtol_overflow  whitespace_edges
tests/integration/: api-endpoints.t.py  audit-fuzz.t.sh  cli-help.t.sh  console-security.t.sh  sentry-flow.t.sh  uninstall-dryrun.t.sh
tests/lib/: assert.sh  tap.sh
tests/reports/: sample-report.md
tests/static/: api-network-defaults.t.sh  apid-skeleton.t.sh  deb-excludes-tests.t.sh  doc-hygiene.t.sh  governance-files.t.sh  lint-enforcement.t.sh  makefile-install-safety.t.sh  no-metrics-workflow.t.sh  python-syntax.t.sh  release-signing.t.sh  risk-weights-sum-to-one.t.sh  shellcheck.t.sh  spdx-headers.t.sh  supply-chain-ci.t.sh  systemd-hardening.t.sh  systemd-unit-safety.t.sh  systemd-verify.t.sh  threat-intel-demo-gating.t.sh  tool-output-honesty.t.sh  toolchain-pin.t.sh  ufw-localhost-only.t.sh  update-notifier-honesty.t.sh  version-sync.t.sh  webhook-retry.t.sh  webhook-signing.t.sh  yaml-lint.t.sh
tests/unit/: alerts-payload.t.sh  api-cidr-allowlist.t.py  env-detect.t.sh  functions.t.sh  preflight.t.sh  pwquality-parse.t.sh  pwquality_parse_test.c
usr/share/applications/: hardn-gui.desktop
usr/share/hardn/modules/: hardening-enhanced.sh  hardening.sh
usr/share/hardn/scripts/: hardn-service-manager.sh  hardn-uninstall.sh  security-tools-manager.sh
usr/share/hardn/tools/: aide.sh  apparmor.sh  auditd.sh  clamv.sh  env-detect.sh  (+12 more)
(+9 files in other folders)
