[package]
name = "hardn"
version = "1.0.0-1"
edition = "2021"
authors = ["Security International Group"]
description = "HARDN - Linux Security Hardening Framework (Demo Version)"
license = "MIT"
homepage = "https://github.com/Security-International-Group/HARDN"
repository = "https://github.com/Security-International-Group/HARDN"
keywords = ["security", "hardening", "debian", "linux", "STIG"]
categories = ["command-line-utilities", "os"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
form_urlencoded = "1.2.2"
colored = "3.0"
libc = "0.2.175"
glob = "0.3.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
csv = "1.1"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.5"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5.4"
lru = "0.9"
sha2 = "0.10"
atty = "0.2"
tempfile = "3.0"
ctrlc = "3.4"
gtk4 = { version = "0.10", package = "gtk4" }
glib = "0.21"
gio = "0.21"
comfy-table = "7.2"
once_cell = "1.19"
vte4 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
quick-xml = "0.31"

[profile.release]
opt-level = "z"    # Optimize for size
strip = true       # Strip symbols
lto = true         # Enable link-time optimization

[[bin]]
name = "hardn"
path = "src/main.rs"

[[bin]]
name = "hardn-monitor"
path = "src/hardn-monitor.rs"

[[bin]]
name = "hardn-gui"
path = "src/hardn-gui.rs"

[patch.crates-io]
# partitions = { git = "https://github.com/DDOtten/partitions.git", branch = "master" }
