[package]
name = "hardn"
version = "1.2.92"
edition = "2024"
authors = ["Security International Group"]
description = "HARDN - Linux Security Hardening Framework"
license = "MIT"
homepage = "https://github.com/Security-International-Group/HARDN"
repository = "https://github.com/Security-International-Group/HARDN"
keywords = ["security", "hardening", "debian", "linux", "STIG"]
categories = ["command-line-utilities", "os"]

[features]
default = []

[dependencies]
# CLI + config
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.3"
# logging + terminal UX
log = "0.4"
colored = "3.0"
comfy-table = "7.2"
# runtime helpers
tempfile = "3.27"
ctrlc = "3.5"
#
# NOTE: the LEGION runtime engine was removed in the strip-legion refactor,
# which orphaned ~16 dependencies (tokio, axum, rusqlite, dashmap, regex,
# sha2, uuid, futures, ...). They are intentionally NOT carried here. The
# Sprint 1 compliance API re-adds axum + tokio when it uses them; any crypto
# lands via a FIPS-validated module (aws-lc-rs) in Sprint 5.

[profile.release]
opt-level = "z"    # Optimize for size
strip = true       # Strip symbols
lto = true         # Enable link-time optimization

[[bin]]
name = "hardn"
path = "src/main.rs"

[patch.crates-io]
# partitions = { git = "https://github.com/DDOtten/partitions.git", branch = "master" }
