[package]
name = "hardn"
version = "1.2.92"
edition = "2024"
authors = ["Security International Group"]
description = "HARDN - Linux Security Hardening Framework"
license = "MIT"
homepage = "https://github.com/Security-International-Group/HARDN"
repository = "https://github.com/Security-International-Group/HARDN"
keywords = ["security", "hardening", "debian", "linux", "STIG"]
categories = ["command-line-utilities", "os"]

[features]
default = []

[dependencies]
# CLI + config
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.3"
# logging + terminal UX
log = "0.4"
colored = "3.0"
comfy-table = "7.2"
# runtime helpers
tempfile = "3.27"
ctrlc = "3.5"
# compliance API (loopback dashboard backend, Sprint 1). Bound to 127.0.0.1
# only; see the no-0.0.0.0-bind gate in .github/workflows/security.yml.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# SHA-256 for the tamper-evident audit-log hash chain and evidence integrity
# (RustCrypto, pure Rust). Sprint 5 moves this behind the FIPS-validated
# provider (aws-lc-rs); the chain format is unchanged by that swap.
sha2 = "0.10"
#
# NOTE: the wider LEGION dependency set (rusqlite, dashmap, regex, uuid,
# futures, ...) stays removed.

[profile.release]
opt-level = "z"    # Optimize for size
strip = true       # Strip symbols
lto = true         # Enable link-time optimization

[[bin]]
name = "hardn"
path = "src/main.rs"

[patch.crates-io]
# partitions = { git = "https://github.com/DDOtten/partitions.git", branch = "master" }
